@@ -25,6 +25,7 @@
 	- encapsulate mounted file system handling in fs.[ch].
 	- sum package file sizes into uint_64 accumulator for fssizes.
 	- skip, don't error, if ESTALE is returned from mount point stat.
+	- don't install on rdonly file systems (#119185).
 
 4.4.3 -> 4.4.4:
 	- start rpm-4.4.4 development.
